--- a/list/package.json
+++ b/list/package.json
@@ -19,14 +19,15 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
-    "express": "^4.16.3",
-    "ejs": "^2.3.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack-dev-server": "^2.5.0",
-    "webpack": "^2.6.1"
+    "babel-preset-stage-3": "^6.24.1",
+    "ejs": "^2.3.3",
+    "express": "^4.16.3",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0"
   }
 }
